Add basic game function on page interface
Allow users to play a basic tic tac toe game in the web page. Create a
render function that connects the DOM elemnts to the game logic.

Add CSS styling to see DOM maniuplation take effect

Add HTML classes game container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="header"> Tic Tac Toe! </div>
+    <div class="gameboard-container"> 
+
+    </div>
     
 </body>
 <script src="script.js"></script>
